fix: structure correction
