# src/main.ts
@@ -6,32 +6,40 @@ import { writeFileSync } from 'fs';
 
 async function bootstrap() {
   const app = await NestFactory.create(AppModule);
-  // app.setGlobalPrefix('order-management-service');
 
   app.enableCors({
     origin: ['http://localhost:3000', 'https://tradeling-portal.vercel.app'],
     methods: 'GET,HEAD,PUT,PATCH,POST,DELETE',
     allowedHeaders: 'Content-Type, Accept, Authorization',
   });
+
   const config = new DocumentBuilder()
     .setTitle('Order Management Service')
     .setDescription(
       'Mircoservice which acts on set of activities and processes involved in managing customer orders from the order placement to final fulfillment and delivery.',
     )
-    .setExternalDoc('order-management-service/swagger.json', '/swagger.json')
     .setVersion('1.0')
     .addTag('order')
     .build();
+
   const document = SwaggerModule.createDocument(app, config);
+  writeFileSync('./swagger.json', JSON.stringify(document, null, 2));
+
   SwaggerModule.setup('swagger', app, document, {
-    jsonDocumentUrl: 'swagger.json',
+    swaggerOptions: {
+      persistAuthorization: true,
+    },
+    customSiteTitle: 'Order Management API Docs',
+    explorer: true,
+    swaggerUrl: '/swagger.json',
   });
-  writeFileSync('./swagger.json', JSON.stringify(document));
+
   app.useGlobalPipes(
     new ValidationPipe({
       whitelist: true,
     }),
   );
+
   await app.listen(process.env.PORT ?? 3000);
 }
 bootstrap();
