# src/order/types/list-order-filter.interface.ts
@@ -3,11 +3,12 @@ import { DateFilterDto } from '../../dto/date-filter.dto';
 export interface ListOrderFilter {
   businessName?: string;
   orderNo?: string;
-  status?: string;
+  status?: string[];
   quantity?: number;
+  orderValue?: number;
   date?: DateFilterDto;
   page?: number;
   limit?: number;
-  sortOrder?: string;
+  sortOrder?: 'ASC' | 'DESC';
   sortColumn?: string;
 }
